Generate all API clients