@@ -1,6 +1,5 @@
 package org.openapitools.api;
 
-import org.openapitools.model.*;
 import org.openapitools.api.DefaultApiService;
 import org.openapitools.api.factories.DefaultApiServiceFactory;
 
@@ -31,7 +30,7 @@ import javax.validation.Valid;
 
 
 @io.swagger.annotations.Api(description = "the default API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2021-09-03T15:25:53.422+10:00[Australia/Melbourne]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2026-08-17T02:15:33.561165235Z[Etc/UTC]", comments = "Generator version: 7.24.0")
 public class DefaultApi  {
    private final DefaultApiService delegate;
 
@@ -42,11 +41,11 @@ public class DefaultApi  {
          String implClass = servletContext.getInitParameter("DefaultApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (DefaultApiService) Class.forName(implClass).newInstance();
+               delegate = (DefaultApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
-         } 
+         }
       }
 
       if (delegate == null) {
@@ -56,7 +55,7 @@ public class DefaultApi  {
       this.delegate = delegate;
    }
 
-    @DELETE
+    @javax.ws.rs.DELETE
     @Path("/{path}/{name}")
     
     
@@ -70,7 +69,7 @@ public class DefaultApi  {
     throws NotFoundException {
         return delegate.deleteNode(path, name, securityContext);
     }
-    @GET
+    @javax.ws.rs.GET
     @Path("/{intermediatePath}/{authorizableId}.ks.json")
     
     @Produces({ "text/plain" })
@@ -85,7 +84,7 @@ public class DefaultApi  {
     throws NotFoundException {
         return delegate.getAuthorizableKeystore(intermediatePath, authorizableId, securityContext);
     }
-    @GET
+    @javax.ws.rs.GET
     @Path("/{intermediatePath}/{authorizableId}/keystore/store.p12")
     
     @Produces({ "application/octet-stream" })
@@ -99,7 +98,7 @@ public class DefaultApi  {
     throws NotFoundException {
         return delegate.getKeystore(intermediatePath, authorizableId, securityContext);
     }
-    @GET
+    @javax.ws.rs.GET
     @Path("/{path}/{name}")
     
     
@@ -113,7 +112,7 @@ public class DefaultApi  {
     throws NotFoundException {
         return delegate.getNode(path, name, securityContext);
     }
-    @POST
+    @javax.ws.rs.POST
     @Path("/{intermediatePath}/{authorizableId}.ks.html")
     @Consumes({ "multipart/form-data" })
     @Produces({ "text/plain" })
@@ -124,14 +123,14 @@ public class DefaultApi  {
         @io.swagger.annotations.ApiResponse(code = 200, message = "Retrieved Authorizable Keystore info", response = KeystoreInfo.class),
         @io.swagger.annotations.ApiResponse(code = 200, message = "Default response", response = String.class)
     })
-    public Response postAuthorizableKeystore(@ApiParam(value = "", required = true) @PathParam("intermediatePath") @NotNull  String intermediatePath,@ApiParam(value = "", required = true) @PathParam("authorizableId") @NotNull  String authorizableId,@ApiParam(value = "") @QueryParam(":operation")  String colonOperation,@ApiParam(value = "") @QueryParam("currentPassword")  String currentPassword,@ApiParam(value = "") @QueryParam("newPassword")  String newPassword,@ApiParam(value = "") @QueryParam("rePassword")  String rePassword,@ApiParam(value = "") @QueryParam("keyPassword")  String keyPassword,@ApiParam(value = "") @QueryParam("keyStorePass")  String keyStorePass,@ApiParam(value = "") @QueryParam("alias")  String alias,@ApiParam(value = "") @QueryParam("newAlias")  String newAlias,@ApiParam(value = "") @QueryParam("removeAlias")  String removeAlias,
+    public Response postAuthorizableKeystore(@ApiParam(value = "", required = true) @PathParam("intermediatePath") @NotNull  String intermediatePath,@ApiParam(value = "", required = true) @PathParam("authorizableId") @NotNull  String authorizableId,@ApiParam(value = "") @QueryParam(":operation")  String operation,@ApiParam(value = "") @QueryParam("currentPassword")  String currentPassword,@ApiParam(value = "") @QueryParam("newPassword")  String newPassword,@ApiParam(value = "") @QueryParam("rePassword")  String rePassword,@ApiParam(value = "") @QueryParam("keyPassword")  String keyPassword,@ApiParam(value = "") @QueryParam("keyStorePass")  String keyStorePass,@ApiParam(value = "") @QueryParam("alias")  String alias,@ApiParam(value = "") @QueryParam("newAlias")  String newAlias,@ApiParam(value = "") @QueryParam("removeAlias")  String removeAlias,
  @FormDataParam("cert-chain") FormDataBodyPart certChainBodypart ,
  @FormDataParam("pk") FormDataBodyPart pkBodypart ,
  @FormDataParam("keyStore") FormDataBodyPart keyStoreBodypart ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.postAuthorizableKeystore(intermediatePath, authorizableId, colonOperation, currentPassword, newPassword, rePassword, keyPassword, keyStorePass, alias, newAlias, removeAlias, certChainBodypart, pkBodypart, keyStoreBodypart, securityContext);
+        return delegate.postAuthorizableKeystore(intermediatePath, authorizableId, operation, currentPassword, newPassword, rePassword, keyPassword, keyStorePass, alias, newAlias, removeAlias, certChainBodypart, pkBodypart, keyStoreBodypart, securityContext);
     }
-    @POST
+    @javax.ws.rs.POST
     @Path("/{path}/{name}")
     @Consumes({ "multipart/form-data" })
     
@@ -141,12 +140,12 @@ public class DefaultApi  {
     @io.swagger.annotations.ApiResponses(value = {
         @io.swagger.annotations.ApiResponse(code = 200, message = "Default response", response = Void.class)
     })
-    public Response postNode(@ApiParam(value = "", required = true) @PathParam("path") @NotNull  String path,@ApiParam(value = "", required = true) @PathParam("name") @NotNull  String name,@ApiParam(value = "") @QueryParam(":operation")  String colonOperation,@ApiParam(value = "") @QueryParam("deleteAuthorizable")  String deleteAuthorizable,
- @FormDataParam("file") FormDataBodyPart fileBodypart ,@Context SecurityContext securityContext)
+    public Response postNode(@ApiParam(value = "", required = true) @PathParam("path") @NotNull  String path,@ApiParam(value = "", required = true) @PathParam("name") @NotNull  String name,@ApiParam(value = "") @QueryParam(":operation")  String operation,@ApiParam(value = "") @QueryParam("deleteAuthorizable")  String deleteAuthorizable,
+ @FormDataParam("file") FormDataBodyPart _fileBodypart ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.postNode(path, name, colonOperation, deleteAuthorizable, fileBodypart, securityContext);
+        return delegate.postNode(path, name, operation, deleteAuthorizable, _fileBodypart, securityContext);
     }
-    @POST
+    @javax.ws.rs.POST
     @Path("/{path}/{name}.rw.html")
     
     
@@ -160,7 +159,7 @@ public class DefaultApi  {
     throws NotFoundException {
         return delegate.postNodeRw(path, name, addMembers, securityContext);
     }
-    @POST
+    @javax.ws.rs.POST
     @Path("/{path}/")
     
     
@@ -170,8 +169,8 @@ public class DefaultApi  {
     @io.swagger.annotations.ApiResponses(value = {
         @io.swagger.annotations.ApiResponse(code = 200, message = "Default response", response = Void.class)
     })
-    public Response postPath(@ApiParam(value = "", required = true) @PathParam("path") @NotNull  String path,@ApiParam(value = "", required = true) @QueryParam("jcr:primaryType") @NotNull  String jcrColonPrimaryType,@ApiParam(value = "", required = true) @QueryParam(":name") @NotNull  String colonName,@Context SecurityContext securityContext)
+    public Response postPath(@ApiParam(value = "", required = true) @PathParam("path") @NotNull  String path,@ApiParam(value = "", required = true) @QueryParam("jcr:primaryType") @NotNull  String jcrPrimaryType,@ApiParam(value = "", required = true) @QueryParam(":name") @NotNull  String name,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.postPath(path, jcrColonPrimaryType, colonName, securityContext);
+        return delegate.postPath(path, jcrPrimaryType, name, securityContext);
     }
 }
