@@ -1,6 +1,5 @@
 package org.openapitools.api;
 
-import org.openapitools.model.*;
 import org.openapitools.api.LibsApiService;
 import org.openapitools.api.factories.LibsApiServiceFactory;
 
@@ -27,11 +26,11 @@ import javax.ws.rs.*;
 import javax.validation.constraints.*;
 import javax.validation.Valid;
 
-@Path("/libs/granite")
+@Path("/libs")
 
 
 @io.swagger.annotations.Api(description = "the libs API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2021-09-03T15:25:53.422+10:00[Australia/Melbourne]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2026-08-17T02:15:33.561165235Z[Etc/UTC]", comments = "Generator version: 7.24.0")
 public class LibsApi  {
    private final LibsApiService delegate;
 
@@ -42,11 +41,11 @@ public class LibsApi  {
          String implClass = servletContext.getInitParameter("LibsApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (LibsApiService) Class.forName(implClass).newInstance();
+               delegate = (LibsApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
-         } 
+         }
       }
 
       if (delegate == null) {
@@ -56,8 +55,8 @@ public class LibsApi  {
       this.delegate = delegate;
    }
 
-    @GET
-    @Path("/core/content/login.html")
+    @javax.ws.rs.GET
+    @Path("/granite/core/content/login.html")
     
     @Produces({ "text/html" })
     @io.swagger.annotations.ApiOperation(value = "", notes = "", response = String.class, tags={ "cq", })
@@ -68,8 +67,8 @@ public class LibsApi  {
     throws NotFoundException {
         return delegate.getLoginPage(securityContext);
     }
-    @GET
-    @Path("/security/truststore.json")
+    @javax.ws.rs.GET
+    @Path("/granite/security/truststore.json")
     
     @Produces({ "application/json" })
     @io.swagger.annotations.ApiOperation(value = "", notes = "", response = TruststoreInfo.class, authorizations = {
@@ -83,8 +82,8 @@ public class LibsApi  {
     throws NotFoundException {
         return delegate.getTruststoreInfo(securityContext);
     }
-    @POST
-    @Path("/security/post/authorizables")
+    @javax.ws.rs.POST
+    @Path("/granite/security/post/authorizables")
     
     @Produces({ "text/html" })
     @io.swagger.annotations.ApiOperation(value = "", notes = "", response = String.class, authorizations = {
@@ -93,12 +92,26 @@ public class LibsApi  {
     @io.swagger.annotations.ApiResponses(value = {
         @io.swagger.annotations.ApiResponse(code = 200, message = "Default response", response = String.class)
     })
-    public Response postAuthorizables(@ApiParam(value = "", required = true) @QueryParam("authorizableId") @NotNull  String authorizableId,@ApiParam(value = "", required = true) @QueryParam("intermediatePath") @NotNull  String intermediatePath,@ApiParam(value = "") @QueryParam("createUser")  String createUser,@ApiParam(value = "") @QueryParam("createGroup")  String createGroup,@ApiParam(value = "") @QueryParam("rep:password")  String repColonPassword,@ApiParam(value = "") @QueryParam("profile/givenName")  String profileGivenName,@Context SecurityContext securityContext)
+    public Response postAuthorizables(@ApiParam(value = "", required = true) @QueryParam("authorizableId") @NotNull  String authorizableId,@ApiParam(value = "", required = true) @QueryParam("intermediatePath") @NotNull  String intermediatePath,@ApiParam(value = "") @QueryParam("createUser")  String createUser,@ApiParam(value = "") @QueryParam("createGroup")  String createGroup,@ApiParam(value = "") @QueryParam("rep:password")  String repPassword,@ApiParam(value = "") @QueryParam("profile/givenName")  String profileGivenName,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.postAuthorizables(authorizableId, intermediatePath, createUser, createGroup, repColonPassword, profileGivenName, securityContext);
+        return delegate.postAuthorizables(authorizableId, intermediatePath, createUser, createGroup, repPassword, profileGivenName, securityContext);
     }
-    @POST
-    @Path("/security/post/truststore")
+    @javax.ws.rs.POST
+    @Path("/replication/treeactivation.html")
+    
+    
+    @io.swagger.annotations.ApiOperation(value = "", notes = "", response = Void.class, authorizations = {
+        @io.swagger.annotations.Authorization(value = "aemAuth")
+    }, tags={ "sling", })
+    @io.swagger.annotations.ApiResponses(value = {
+        @io.swagger.annotations.ApiResponse(code = 200, message = "Default response", response = Void.class)
+    })
+    public Response postTreeActivation(@ApiParam(value = "", required = true) @QueryParam("ignoredeactivated") @NotNull  Boolean ignoredeactivated,@ApiParam(value = "", required = true) @QueryParam("onlymodified") @NotNull  Boolean onlymodified,@ApiParam(value = "", required = true) @QueryParam("path") @NotNull  String path,@ApiParam(value = "", required = true, defaultValue = "activate") @DefaultValue("activate") @QueryParam("cmd") @NotNull  String cmd,@Context SecurityContext securityContext)
+    throws NotFoundException {
+        return delegate.postTreeActivation(ignoredeactivated, onlymodified, path, cmd, securityContext);
+    }
+    @javax.ws.rs.POST
+    @Path("/granite/security/post/truststore")
     @Consumes({ "multipart/form-data" })
     @Produces({ "text/plain" })
     @io.swagger.annotations.ApiOperation(value = "", notes = "", response = String.class, authorizations = {
@@ -107,13 +120,13 @@ public class LibsApi  {
     @io.swagger.annotations.ApiResponses(value = {
         @io.swagger.annotations.ApiResponse(code = 200, message = "Default response", response = String.class)
     })
-    public Response postTruststore(@ApiParam(value = "") @QueryParam(":operation")  String colonOperation,@ApiParam(value = "") @QueryParam("newPassword")  String newPassword,@ApiParam(value = "") @QueryParam("rePassword")  String rePassword,@ApiParam(value = "") @QueryParam("keyStoreType")  String keyStoreType,@ApiParam(value = "") @QueryParam("removeAlias")  String removeAlias,
+    public Response postTruststore(@ApiParam(value = "") @QueryParam(":operation")  String operation,@ApiParam(value = "") @QueryParam("newPassword")  String newPassword,@ApiParam(value = "") @QueryParam("rePassword")  String rePassword,@ApiParam(value = "") @QueryParam("keyStoreType")  String keyStoreType,@ApiParam(value = "") @QueryParam("removeAlias")  String removeAlias,
  @FormDataParam("certificate") FormDataBodyPart certificateBodypart ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.postTruststore(colonOperation, newPassword, rePassword, keyStoreType, removeAlias, certificateBodypart, securityContext);
+        return delegate.postTruststore(operation, newPassword, rePassword, keyStoreType, removeAlias, certificateBodypart, securityContext);
     }
-    @POST
-    @Path("/security/post/sslSetup.html")
+    @javax.ws.rs.POST
+    @Path("/granite/security/post/sslSetup.html")
     @Consumes({ "multipart/form-data" })
     @Produces({ "text/plain" })
     @io.swagger.annotations.ApiOperation(value = "", notes = "", response = String.class, authorizations = {
